@@ -1,2 +1,3 @@
-lib/.precomp
-.precomp
+.precomp/
+/Slang-Tuxic-*
+*.rakucov
