@@ -2,7 +2,7 @@ name = Slang::Tuxic
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Slang/Tuxic.rakumod
+filename = doc/Slang-Tuxic.rakudoc
 
 [UploadToZef]
 
@@ -10,4 +10,6 @@ filename = lib/Slang/Tuxic.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
