@@ -108,50 +108,4 @@ my role Tuxic::Legacy {
 
 use Slangify Tuxic, Mu, Tuxic::Legacy, Mu;
 
-=begin pod
-
-=head1 NAME
-
-Slang::Tuxic - allow whitespace between subroutine and the opening parenthesis
-
-=head1 SYNOPSIS
-
-=begin code :lang<raku>
-
-foo 3, 5;   # 15, as usual
-foo(3, 5);  # also 15, as usual
-foo (3, 5); # 15, /o\
-
-# It also allows to put space before argument lists in method calls:
-42.fmt('-%d-');  # -42-
-42.fmt: '-%d-';  # -42-
-42.fmt ('-%d-'); # -42-
-
-=end code
-
-=head1 DESCRIPTION
-
-The C<Slang::Tuxic> module adapts the Raku Programming Language syntax
-to allow you to put whitespace between the name of a subroutine and
-the opening parenthesis when calling a subroutine.
-
-Be aware that this introduces ambiguous situations, like when you
-want to pass a List to a sub, or when you need parenthesis around
-the condition after the keywords `if`, `while` and so on.
-
-=head1 AUTHOR
-
-Tobias Leich (FROGGS)
-
-Source can be located at: https://github.com/raku-community-modules/Slang-Tuxic .
-Comments and Pull Requests are welcome.
-
-=head1 COPYRIGHT AND LICENSE
-
-Copyright 2014-2018 Tobias Leich, 2023 Raku Community
-
-This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
-
-=end pod
-
 # vim: expandtab shiftwidth=4
